# SE-RemindInvoice

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_0001_initial_schema.py  20240102_0002_add_subscription.py  20240103_0003_fix_reminder_rules_is_active.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/auth/: jwt.py  oauth.py
backend/app/models/: __init__.py  admin.py  base.py  client.py  invoice.py  reminder.py  user.py
backend/app/routers/: admin.py  auth.py  clients.py  dashboard.py  invoices.py  reminders.py  subscription.py
backend/app/schemas/: admin.py  auth.py  client.py  dashboard.py  invoice.py  reminder.py  subscription.py
backend/app/services/: auth_service.py  client_service.py  email.py  invoice_service.py  pdf.py  reminder_service.py  subscription_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_invoice_service.py  test_invoices.py
frontend/: Dockerfile  next.config.mjs  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: admin.ts  api.ts  auth.ts  clients.ts  dashboard.ts  invoices.ts  reminders.ts  subscription.ts
frontend/src/types/: auth.ts  client.ts  invoice.ts  reminder.ts
(+28 files in other folders)
